# enerSIM

./: .Dockerfile  .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  requirements.txt  setup_environment.sh
additional_datasets/: create_diff_dataframe.py  create_reference_predictions.py  load_data.py  sarima_sim.py  setup_datasets.sh  uema.py
additional_datasets/create_pv_profiles/: create_example_json.py  create_pv_profiles.py
additional_datasets/htw_berlin/: Readme_DE.txt  create_dataset_csv.py  dataset_stats.py
additional_datasets/preprocessed_householdsim/: ground_truth_creator.py
batterysim/: battery.py  csv_connector.py  power_forecast.py  simplebattery.py
cosimulation_city_energy/: Connect_Grid.py  Panda_Interface.py  Rust_Interface.py  aggregator.py  battery_simulations.py  battery_tests.py  city_energy_simulation.py  collector.py  example.py  network_grid.py  pandapowermosaik.py  rust_integrated_battery.py
cosimulation_city_energy/simulation_data/: Energy_Consumption.ipynb
data_preparation/: datapreparation.py
enerdagsim/: Cargo.toml
enerdagsim/benches/: nbhd_steps.rs
enerdagsim/src/: lib.rs  main.rs
entity_connection/: connect.py
evaluation_utils/: evaluation_utils.py  hdf5_to_df.py  pricing.py
householdsim/: mosaik.py  simulationdatabaseconnection.py  timehandler.py
mosaik_web/: mosaik.py
mosaik_web/html/media/: d3.min.js  main.css  mosaik.js
test_market/: mock_households.py  test_market.py
visualization/: 01_enerdag_sim_htw.ipynb  02_01_htw_berlin_comparison_price.ipynb  02_02_householdsim_comparison_price.ipynb  03_01_htw_berlin_comparison_energy.ipynb  03_02_householdsim_comparison_energy.ipynb  datensatz_htw.ipynb  test2.py  vis_utils.py
visualization/figures/: cossmic  htw_berlin  htw_berlin_32_32
